--- a/client/src/styles/landingPage.css
+++ b/client/src/styles/landingPage.css
@@ -5,8 +5,7 @@
   align-items: center;
   gap: 5rem;
   padding: 1rem;
-  padding-bottom: 0;
-  max-width: 100vw;
+  max-width: 90vw;
 }
 
 .intro-box {
@@ -25,8 +24,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  max-width: 90%;
+  max-width: 100%; /* Use 100% instead of 95% */
   margin: 0 auto;
+  overflow-x: hidden; /* Hide horizontal overflow */
 }
 
 .maps {
@@ -64,4 +64,11 @@
 
 .button-group {
   display: flex;
+}
+.outer-box {
+  max-width: 100%; /* Use 100% instead of the default width */
+}
+
+.image {
+  max-width: 100%; /* Use 100% instead of the default width */
 }
